src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: P0.5"
expression: snapshot
---
initial configure:
size: 1000 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1000 × 336, bounds: 1248 × 688, states: [Activated]
