src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhU-b-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: U\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 1000 × 680, bounds: 1231 × 680, states: [Activated]
