src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhU-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: U\nborder on\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 680, bounds: 1240 × 680, states: [Activated]
